# Smart-Home-Demo-V2

./: README.md
1.0/Master/: Master.ino  a_def_hard.h  a_def_soft.h
1.0/Slave/: Slave.ino  a_def.h
2.0/: sdkconfig  sdkconfig.old
2.0/components/ble-mesh-client/: CMakeLists.txt
2.0/components/ble-mesh-server-1/: CMakeLists.txt
2.0/components/ble-server/: CMakeLists.txt
2.0/components/src/: espnow.c
2.0/main/: CMakeLists.txt  espnow_helper.c  espnow_helper.h  idf_component.yml  main.c  mqtt_helper.c  mqtt_helper.h  my_rtos.h  wifi_helper.c  wifi_helper.h  ws_helper.c  ws_helper.h
2.0/main/front/: index.html  index.html.bak
2.0/main/helpers/: mem_helper.c  nvs_helper.h
2.0/main/json/: json.h
Home Assistant/Components/lifx_joy/: light.py  select copy.py  text.py
Home Assistant/Configs/custom_cards/: card_aria2_header_joy.yaml  card_automation_sensor_joy.yaml  card_automation_test_joy.yaml  card_battery_mini_joy.yaml  card_computer_status_joy.yaml  card_cover_joy.yaml  card_cover_slim_joy.yaml  card_energy_joy.yaml  chip_time.yaml  (+42 more)
Home Assistant/Lovelace cards/: aria2-card.js  color-picker-card.js  colorGenerator.js  gallery-joy.js  grid-joy.js  horizen-stack-joy.js  round-progressbar-card.js
Home Assistant/Theme/: minimalist-desktop_origin.yaml  minimalist-mobile-tapbar-origin.yaml
Home Assistant/home-assistant-streamdeck-yaml/: home_assistant_streamdeck_yaml.py
Master/: TimerCtl.h  images.h  mqtt.ino  serial.ino
Schematics/: ProProject_ESP32-Gateway_2023-11-01.epro  ProProject_ESP32-Gateway_2023-11-02.epro
Slave/: Slave.ino  effects.ino
(+19 files in other folders)
